--- a/demos/rushhour/styles.css
+++ b/demos/rushhour/styles.css
@@ -1,17 +1,104 @@
-html, body {
+body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.settings {
+    position: fixed;
+    z-index: 100;
+}
+
+.right-0 {
+    right: 0;
+}
+
+.content {
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 
 #cnvs {
-    padding: 0;
-    margin: auto;
-    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0.5, 0.5);
+}
+
+.logo {
+    height: 100px;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, 0);
+    z-index: 10000;
+}
+
+.modal {
+    z-index: 1000;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    width: 85%;
+    font-family: 'IBM 3270', semi-narrow;
+    background-image: url(./images/menu-bg.webp);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.modal ul {
+    width: 80%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.modal h1 {
+    margin-top: 10px;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    #cnvs {
+        transform: translate(-50%, -50%) scale(0.8, 0.8);
+    }
+
+    .logo {
+        top: 21%;
+        transform: translate(-50%, 0);
+    }
+    
+    .modal {
+        width: 550px;
+        height: 450px;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 1200px) { 
+    #cnvs {
+        transform: translate(-50%, -50%) scale(1, 1);
+    }
+    .logo {
+        top: 5%;
+        transform: translate(-50%, 0);
+    }
 }
 
 li {
@@ -28,27 +115,20 @@ li:hover::before {
 }
 
 .moves {
-    position: fixed;
+    position: absolute;
     z-index: 2;
     bottom: 0;
-    background-color: white;
-    padding-left: 15px;
+    background-image: url('images/plane-bg.webp');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 20px;
     line-height: 15px;
 }
 
-.modal {
-    z-index: 1;
-    border: 3px black solid;
-    position: fixed;
-    margin-left: 15vw;
-    margin-right: 15vw;
-    background: white;
-    width: 70vw;
-    height: 30vh;
-    margin-top: 35vh;
-    margin-bottom: 35vh;
-    padding: 20px;
-    font-family: 'IBM 3270', semi-narrow;
+/* preload menu-bg.webp for .modal */
+.modal-preload {
+    background: url(./images/menu-bg.webp) no-repeat -9999px -9999px;
 }
 .show {
     display: block;
@@ -59,6 +139,26 @@ li:hover::before {
 
 .menu-item {
     text-decoration: none;
-    color: black;
+    color: white;
+    font-size: 24px;
     cursor: pointer;
+}
+
+.header {
+    text-align: center;
+    color: white;
+    font-size: 56px;
+}
+
+.logo {
+    height: 100px;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 10000;
+}
+
+.instr-text {
+    margin: 0 20px 0 20px;
+    color: white;
 }
