--- a/demos/rushhour/styles.css
+++ b/demos/rushhour/styles.css
@@ -53,6 +53,7 @@ body {
     transform: translate(-50%, -50%);
     padding: 20px;
     width: 85%;
+    height: 350px;
     font-family: 'IBM 3270', semi-narrow;
     background-image: url(./images/menu-bg.webp);
     background-repeat: no-repeat;
